--- a/views/bars/new.ejs
+++ b/views/bars/new.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %>
+<%- include("../partials/header") %>
 
 <div class="container mt-5">
     <div class="row">
@@ -46,4 +46,4 @@
     </div>
 </div>
 
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
