--- a/views/bars/edit.ejs
+++ b/views/bars/edit.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %>
+<%- include("../partials/header") %>
 
 
 <div class="container mt-5">
@@ -88,4 +88,4 @@
 </div> -->
 
 
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
