--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") %>
 
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<section id="carouselExampleIndicators" class="carousel slide d-none d-md-block" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -38,38 +38,41 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
+</section>
 
 
-<section id="barHome" class="container mt-5">
-    <div class="container">
+<section id="barHome" class="container-fluid mt-5">
+    <h3 class="text-center sectionHeader">
+        <i class="fas fa-glass-martini-alt mr-3"></i>Highlighted Bars
+    </h3>
+    <!-- <div class="container-fluid">
         <div class="row">
             <div class="col-sm">
             </div>
-            <div class="col-sm d-flex justify-content-center">
+            <span class="col-sm d-flex justify-content-center d-block">
                 <h3 class="text-center sectionHeader">
                     <i class="fas fa-glass-martini-alt mr-3"></i>Highlighted Bars
                 </h3>
-            </div>
-            <div class="col-sm d-flex justify-content-center">
+            </span>
+            <span class="col-sm d-flex justify-content-center d-block">
                 <a href="/bars/new">
-                    <button class="btn btn-success float-right">
+                    <button id="addBar" class="btn btn-outline-dark float-right">
                         <i class="fas fa-plus-circle mr-1"></i>Add Bar
                     </button>
                 </a>
-            </div>
+            </span>
         </div>
     </div>
-    
-    <div class="row">
+     -->
+    <div class="row d-flex justify-content-center">
         <% bars.forEach(function(bar){ %>
-        <div class="col-md-6 col-lg-4 d-flex justify-content-center">
-            <div class="card shadow border-0 mt-4" style="width: 22rem;">
+        <div class="card-deck col-6 col-xl-3">
+            <div class="homeCard card shadow border-0 mt-4" style="width: 22rem;">
                 <a href="/bars/<%=bar.id%>">
-                    <img src="<%=bar.image%>" class="card-img-top thumbnail" alt="Image"> 
+                    <img src="<%=bar.image%>" class="card-img-top thumbnail img-fluid" alt="Image"> 
                 </a>
                 <div class="card-body">
-                    <ul class="list-inline">
+                    <ul class="list-inline mb-0" style="height: 1.5em;">
                         <li class="list-inline-item">
                         <a class="text-info" href="/bars/<%=bar.id%>">
                             <h5 class="card-title"><%= bar.name %></h5>
@@ -79,10 +82,59 @@
                             <%= bar.price %>
                         </li>    
                     </ul>
+                    <ul class="list-inline" style="height: 0.25em">
+                        <% if (bar.comments.length > 0) { %>
+                        <li class="list-inline-item float-right"><small class="fas fa-star text-danger"></small>
+                            <strong><%= bar.avgRating.toFixed(1) %></strong>
+                        </li>
+                        <% } %>
+                        <li id="rating" class="list-inline-item text-muted">
+                            <% if (bar.comments.length > 1) {%>
+                            <%= bar.comments.length %> Reviews
+                            <% } else {%>
+                            <%= bar.comments.length %> Review
+                            <%}%>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
         <% }) %>
+    </div>
+</section>
+
+<hr class="mt-5 mb-3">
+
+<section id="gallery">
+    <h3 class="mt-4 sectionHeader d-inline d-flex justify-content-center mb-4">
+        <i class="fas fa-blog mr-2"></i>Highlighted Blogs
+    </h3>
+    <div class="container-fluid">
+        <div class="row d-flex justify-content-center">
+            <% blogs.forEach(function(blog) { %>
+                <div class="card-deck col-lg-4 mb-4">
+                    <div class="homeCard card shadow">
+                        <a href="/blogs/<%=blog.id%>">
+                            <img id="homeBlogThumbnail" class="card-img-top img-fluid" src="<%= blog.image %>" alt="">
+                        </a>
+
+                        <div class="card-body">
+                            <a href="/blogs/<%=blog.id%>">
+                                <h5 class="card-title text-info"><%= blog.title %></h5>
+                            </a>
+                            <p class="card-text"><%- blog.body.substring(0,150) %>...</p>
+                            <a href="/blogs/<%=blog.id%>" class="btn btn-outline-info btn-sm">Read more</a>
+                        </div>
+                        <div class="card-footer">
+                            <p class="text-muted"><%= blog.created.toDateString() %> by
+                                <a href="#" class="text-info"><%=blog.author.username%></a>
+                            </p>
+                        </div>
+                    </div>
+                </div>                
+            <% }) %>
+
+        </div>
     </div>
 </section>
        
