--- a/views/home.ejs
+++ b/views/home.ejs
@@ -41,7 +41,7 @@
 </section>
 
 
-<section id="barHome" class="container-fluid mt-5">
+<section id="barHome" class="container-fluid pt-5">
     <h3 class="text-center sectionHeader">
         <i class="fas fa-glass-martini-alt mr-3"></i>Highlighted Bars
     </h3>
@@ -66,12 +66,12 @@
      -->
     <div class="row d-flex justify-content-center">
         <% bars.forEach(function(bar){ %>
-        <div class="card-deck col-6 col-xl-3">
-            <div class="homeCard card shadow border-0 mt-4" style="width: 22rem;">
+        <div class="card-deck col-12 col-sm-6 col-xl-3">
+            <div class="homeCard card shadow border-0 mt-4">
                 <a href="/bars/<%=bar.id%>">
                     <img src="<%=bar.image%>" class="card-img-top thumbnail img-fluid" alt="Image"> 
                 </a>
-                <div class="card-body">
+                <div class="card-body pb-1">
                     <ul class="list-inline mb-0" style="height: 1.5em;">
                         <li class="list-inline-item">
                         <a class="text-info" href="/bars/<%=bar.id%>">
@@ -82,7 +82,7 @@
                             <%= bar.price %>
                         </li>    
                     </ul>
-                    <ul class="list-inline" style="height: 0.25em">
+                    <ul class="list-inline mb-4" style="height: 0.25em">
                         <% if (bar.comments.length > 0) { %>
                         <li class="list-inline-item float-right"><small class="fas fa-star text-danger"></small>
                             <strong><%= bar.avgRating.toFixed(1) %></strong>
@@ -96,7 +96,11 @@
                             <%}%>
                         </li>
                     </ul>
+                    <small class="text-muted pt-2">
+                        <i class="fas fa-map-marker-alt mr-1"></i><%= bar.city %>, <%= bar.country %>
+                    </small>
                 </div>
+                
             </div>
         </div>
         <% }) %>
