--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,9 +31,13 @@ Bars</a>
                         <a class="nav-link" href="/blogs"> <i class="fas fa-blog"></i> Blogs</a>
                     </li>
                     <li>
-                        <form action="/bars" method="GET" class="form-inline my-2 my-lg-0">
+                        <form action="/bars" method="GET" class="input-group form-inline my-2 my-lg-0">
                             <input id="searchBar" name="search" class="form-control input-large mr-sm-2" type="search" placeholder="Search Bars by Name, City & Country" aria-label="Search">
-                            <button class="btn btn-dark my-2 my-sm-0" type="submit">Search</button>
+                            
+                                <button class="input-group-append btn btn-dark my-2 my-sm-0" type="submit">
+                                    <i class="fa fa-search"></i></button>
+                                </button>
+                            
                         </form>
                     </li>
                 </ul>
