--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,21 +1,22 @@
 <%- include("partials/header") %>
 
-<div class="container mt-5">
+<section class="container py-5">
     <div class="row">
         <div class="col"></div>
         <div class="col-sm-7 col-md-6 col-lg-5">
             <div class="card shadow border-0">
                 <div class="card-body">
                     <h1 class="text-center">Login</h1>
-                    <form action="/login" method="POST">
+                    <form action="/login" method="POST" novalidate class="needs-validation">
                         <div class="form-group">
-                            <label>Username</label>
-                            <input type="text" name="username" class="form-control">
+                            <input type="email" name="username" class="form-control" placeholder="Email" required>
                         </div>
                         <div class="form-group">
-                            <label>Password</label>
-                            <input type="password" name="password" class="form-control">
+                            <input type="password" name="password" class="form-control" placeholder="Password" required>
                         </div>
+                        <% if (errorFlash && errorFlash.length > 0) { %>
+                            <p class="text-danger"><%= errorFlash %></p>
+                        <% } %>
                         <button class="btn btn-info btn-block">Log In</button>
                     </form>
                     <div class="mt-3 text-muted text-center">
@@ -29,6 +30,6 @@
         </div>
         <div class="col"></div>
     </div>
-</div>
+</section>
 
 <%- include("partials/footer") %>
