--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,44 +1,17 @@
 <footer class="text-center mt-5">
       <small class="text-muted"> 
-          &copy; RooftopReview 2020 
+          &copy; Roofview 2021 
           | <a class="text-muted" href="/about">About</a> 
           | <a class="text-muted" href="https://www.linkedin.com/in/thang-alan-bui/">LinkedIn</a>
-          | <a class="text-muted" href="https://github.com/thangalanbui">Github</a> 
+          | <a class="text-muted" href="https://github.com/alanbui99">Github</a> 
     </small>
 </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!-- Bootstrap scripts and related -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
-<script>
-    
-    var pathLookup =[
-        {pathname: "/bars",
-         title: "RF Bars",
-         id:"bars" },
-        {pathname: "/blogs",
-         title: "RF Blogs",
-         id:"blogs" },
-        {pathname: "/login",
-         title: "RF Login",
-         id:"login" },
-        {pathname: "/register",
-         title: "RF Signup",
-         id:"signup" },
-        {pathname: "/users",
-         title: "RF Profile",
-         id:"user" }
-    ];
-    pathLookup.forEach(function(path) {
-        if (window.location.pathname === path.pathname) {
-        document.title = path.title;
-        document.getElementById(path.id).classList.toggle("active");
-        }
-    });
-    
-</script>
+    <script type="text/javascript" src="/js/main.js"></script>
 
+    <%- include("./toast") %>
 </body>
 </html>
