--- a/views/partials/show-heading.ejs
+++ b/views/partials/show-heading.ejs
@@ -1,5 +1,5 @@
 <section class="py-3">
-    <h3><%= rooftop.name %></h3>
+    <h3 class="text-info"><%= rooftop.name %></h3>
     <div class="row">
         <div class="col-md-8">
             <% if (rooftop.reviews.length > 0) { %>
