--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,5 @@
 body {
-    background-size: cover;
     background-color: #fff;
-    margin-top: 48px;
     font-family: "Lato", sans-serif;
 }
 /* @media (max-width: 979px) {
@@ -50,7 +48,7 @@ body {
 #brand {
     font-family: "EB Garamond", serif;
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 1.75rem;
     color: white;
     text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
         0px 18px 23px rgba(0, 0, 0, 0.1);
@@ -84,14 +82,6 @@ body {
     font-weight: bold;
 }
 
-.white-text-highlight {
-    color: white;
-    text-shadow: 0.1em 0 black, 0 0.1em black, -0.1em 0 black, 0 -0.1em black,
-        -0.1em -0.1em black, -0.1em 0.1em black, 0.1em -0.1em black,
-        0.1em 0.1em black;
-    text-decoration: none;
-}
-
 /* Google Maps */
 #map {
     height: 300px;
@@ -123,6 +113,15 @@ body {
         transition: 0.4s ease;
     }
 }
+
+/* hero-jumbotron */
+
+.hero-jumbotron__brand {
+    font-size: 5rem !important; text-decoration: none;
+    text-decoration:none !important;
+}
+
+
 
 /* thumbnail */
 
