--- a/views/partials/show-CTAs.ejs
+++ b/views/partials/show-CTAs.ejs
@@ -1,12 +1,19 @@
 <section class="py-2">
-    <button class="btn btn-info mr-1">
+    <button class="btn btn-info mr-1" onclick="toReviewSection()">
         <i class="far fa-star mr-1"></i>
         Write a Review
     </button>
 
-    <button class="btn btn-outline-secondary mr-1">
+    <!-- <button class="btn btn-outline-secondary mr-1">
         <i class="fas fa-camera mr-1"></i>
         Add Photo
-    </button>
-
+    </button> -->
 </section>
+
+<script>
+    const toReviewSection = () => {
+        document
+            .getElementById("reviewsSection")
+            .scrollIntoView({ behavior: "smooth", block: "start" });
+    };
+</script>
