--- a/views/rooftops/show.ejs
+++ b/views/rooftops/show.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header") %>
-<main class="container py-4">
+<main class="container mt-5 pt-3">
     <%- include("../partials/show-heading", {rooftop}) %>
     <%- include("../partials/show-gallery", {rooftop}) %>
     <%- include("../partials/show-CTAs") %>    
